# Cabal-syntax-json

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cabal-syntax-json.cabal  Compat.hs  Main.hs  Makefile  README.md  ToJSON.hs  cabal-310.project  cabal-312.project  cabal-314.project  cabal.project  fourmolu.yaml  lefthook.yml  mise.toml  release-please-config.json  test
.github/workflows/: haskell.yml  release.yml
app/: Compat.hs  CondTree.hs  Crosswalk.hs  FieldGrammar.hs  FieldMap.hs  GenericPackageDescription.hs  Json.hs  JsonFieldGrammar.hs  Main.hs  MonoidalMap.hs  Pretty.hs  These.hs  ToJSON.hs
docs/superpowers/plans/: 2026-06-15-pipeline-clarity.md
docs/superpowers/specs/: 2026-06-15-pipeline-clarity-design.md
src/: Compat.hs  CondTree.hs  GenericPackageDescription.hs  Json.hs  JsonFieldGrammar.hs  ListMap.hs  Pretty.hs  Simplify.hs  Utils.hs
src/Cabal/Syntax/: Compat.hs  CondTree.hs  GenericPackageDescription.hs  Json.hs  JsonFieldGrammar.hs  ListMap.hs  Pipeline.hs  Pretty.hs  Simplify.hs  Utils.hs
src/Distribution/: Aeson.hs
src/Distribution/PackageDescription/FieldGrammar/: Copy.hs
tests/: Tests.hs
tests/golden/: Win32.flag-os-string.json  Win32.json  Win32.os-linux.json  Win32.os-windows.json  array.flag-os-string.json  array.json  array.os-windows.json  binary.flag-os-string.json  binary.json  binary.os-osx.json  binary.os-windows.json  bytestring.flag+pure-haskell.json  bytestring.flag-os-string.json  bytestring.flag-pure-haskell.json  bytestring.json  bytestring.os-linux.json  bytestring.os-windows.json  check-exact.flag-os-string.json  check-exact.json  check-ppr.flag-os-string.json  check-ppr.json  compareSizes.flag-os-string.json  compareSizes.json  compareSizes.os-osx.json  compareSizes.os-windows.json  count-deps.flag-os-string.json  count-deps.json  count-deps.os-windows.json  deepseq.flag-os-string.json  deepseq.json  deepseq.os-windows.json  deriveConstants.flag-os-string.json  deriveConstants.json  deriveConstants.os-windows.json  directory.flag-os-string.json  directory.json  directory.os-linux.json  directory.os-windows.json  dump-decls.json  dump-decls.os-linux.json  (+210 more)
