cabal-version:   3.8
name:            Cabal-syntax-json
version:         0.1.0.0
license:         MIT
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple

library
  build-depends:      base         ^>=4.18 || ^>=4.19 || ^>=4.20
                    , bytestring   ^>=0.11 || ^>=0.12
                    , containers
                    , Cabal        ^>=3.10 || ^>=3.12 || ^>=3.14
                    , Cabal-syntax ^>=3.10 || ^>=3.12 || ^>=3.14
                    , pretty
  exposed-modules:    Cabal.Syntax.Compat
                      Cabal.Syntax.CondTree
                      Cabal.Syntax.GenericPackageDescription
                      Cabal.Syntax.Json
                      Cabal.Syntax.JsonFieldGrammar
                      Cabal.Syntax.ListMap
                      Cabal.Syntax.Pretty
                      Cabal.Syntax.Simplify
                      Cabal.Syntax.Utils
  hs-source-dirs:     src
  default-language:   GHC2021

executable cabal2json
  main-is:            Main.hs
  build-depends:      base
                    , bytestring
                    , containers
                    , Cabal
                    , Cabal-syntax
                    , Cabal-syntax-json
                    , pretty
  hs-source-dirs:     app
  default-language:   GHC2021

test-suite golden-tests
  main-is:            Tests.hs
  build-depends:    , base
                    , Cabal-syntax-json
                    , Cabal
                    , Cabal-syntax
                    , filepath
                    , process
                    , tasty
                    , tasty-hunit
                    , tasty-golden
  build-tool-depends: Cabal-syntax-json:cabal2json
  hs-source-dirs:     tests
  default-language:   GHC2021
